--- a/biodata.html
+++ b/biodata.html
@@ -10,6 +10,7 @@
     <center>
         <img src="c:\Users\gopis\Downloads\WhatsApp Image 2024-08-07 at 1.39.54 PM.jpeg" alt="img" width="200" height="200
         ">
+        zdfgxgx
     </center>
     
 </body>
